Added description of experiment

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 02/01 Experiment\n",
+    "\n",
+    "Goals:\n",
+    "* Compare original script and optimized version (66 times faster).\n",
+    "* Checked original script and optimized version produced same result.\n",
+    "* Optimized version did the following improvement:\n",
+    "    * Cleaned unecessary cache (not really needed and will waste memory)\n",
+    "    * Better-formatted\n",
+    "    * Added a function `runExperiment[i, n, a]` to easily set up experiemnts\n"
+   ]
   },
   {
    "cell_type": "code",
