Updated parallel core function to force launch 8 kernels

--- a/run.ipynb
+++ b/run.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -134,6 +134,7 @@
     "\tindSorted = Sort[ind, #1[[2]]<#2[[2]]&];\n",
     "\tindexofjm0 = Total[Range[1,jmax+1]];\n",
     "\tindSortedUntiljmAre0 = indSorted[[1;;indexofjm0]];\n",
+    "    CloseKernels[]; LaunchKernels[8];\n",
     "\tM = Parallelize @ Outer[overlap, indSortedUntiljmAre0, indSortedUntiljmAre0, 1];\n",
     "\tChop[Re[ApproximateByProjection[M]]]\n",
     "]\n",
@@ -169,8 +170,17 @@
    "source": [
     "n = 100;\n",
     "a = 20;\n",
-    "AbsoluteTiming@runExperiment[3, n, a]"
+    "AbsoluteTiming@runExperiment[4, n, a]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
